# second-opinion

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION.md  LICENSE  MCP_FIX_SUMMARY.md  NOTICE  README.md  SECURITY.md  coverage.xml  main.py  pyproject.toml  setup_guide.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
config/: default_settings.yaml  mcp_profiles.yaml  model_profiles.yaml
prompts/evaluation/: comparison.txt  complexity_check.txt  cost_benefit_analysis.txt  evaluation.txt  model_recommendation.txt  second_opinion.txt
prompts/mcp/: parameter_examples.txt
prompts/mcp/tool_descriptions/: batch_comparison.txt  compare_responses.txt  consult.txt  model_benchmark.txt  second_opinion.txt  should_downgrade.txt  should_upgrade.txt  usage_analytics.txt
prompts/system/: followup_evaluation.txt
prompts/templates/: comparison.txt  complexity_check.txt  cost_benefit_analysis.txt  evaluation.txt  model_recommendation.txt  second_opinion.txt
src/second_opinion/: __main__.py
src/second_opinion/cli/: main.py
src/second_opinion/clients/: __init__.py  base.py  lmstudio.py  openrouter.py
src/second_opinion/config/: model_configs.py  settings.py
src/second_opinion/core/: evaluator.py  models.py
src/second_opinion/database/: __init__.py  encryption.py  models.py  store.py
src/second_opinion/mcp/: __init__.py  server.py  session.py
src/second_opinion/mcp/tools/: __init__.py  batch_comparison.py  compare_responses.py  consult.py  model_benchmark.py  second_opinion.py  shared.py  should_downgrade.py  should_upgrade.py  usage_analytics.py
src/second_opinion/orchestration/: __init__.py  orchestrator.py  session_manager.py  types.py
src/second_opinion/prompts/: manager.py
src/second_opinion/utils/: client_factory.py  cost_tracking.py  domain_classifier.py  followup_evaluator.py  pricing.py  sanitization.py  template_loader.py
tests/: conftest.py
tests/test_cli/: test_main.py
tests/test_clients/: test_base.py  test_lmstudio.py  test_openrouter.py
tests/test_config/: test_model_configs.py  test_settings.py
tests/test_conversation_storage/: __init__.py  conftest.py  test_baseline_behavior_simple.py  test_database_models.py
tests/test_core/: test_evaluator.py  test_models.py
tests/test_mcp/: conftest.py  test_batch_comparison_tool.py  test_compare_responses_tool.py  test_consult_tool.py  test_integration.py  test_model_benchmark_tool.py  test_multi_turn_integration.py  test_second_opinion_tool.py  test_server.py  test_session.py  test_shared_utilities.py  test_should_downgrade_tool.py  test_should_upgrade_tool.py  test_tools.py  test_usage_analytics_tool.py
tests/test_orchestration/: test_session_manager.py
tests/test_prompts/: test_manager.py
tests/test_utils/: test_client_factory.py  test_cost_tracking.py  test_domain_classifier.py  test_followup_evaluator.py  test_pricing.py  test_sanitization.py  test_template_loader.py
